GovernorLimitAssignment/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactIDs__c</fullName>
        <label>ContactIDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreditCardNumber__c</fullName>
        <label>CreditCardNumber</label>
        <length>19</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxPCT__c</fullName>
        <label>MaxPCT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multipleof5__c</fullName>
        <label>Multipleof5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +Id ,&quot;account&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>AccountNumberValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK(AccountNumber)),NOT(ISNUMBER(AccountNumber)) )</errorConditionFormula>
        <errorMessage>Account number must be a number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillingPostalCodeValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(BillingCountry = &quot;USA&quot;, BillingCountry = &quot;US&quot;),
NOT(REGEX(BillingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
        <errorMessage>Billing postal code must be in format 99999 OR 99999-9999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CreditCardNumberValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(CreditCardNumber__c )),NOT( REGEX(  CreditCardNumber__c ,  
&quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;)))</errorConditionFormula>
        <errorDisplayField>CreditCardNumber__c</errorDisplayField>
        <errorMessage>Credit Card Number must be in this format: 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DateVaidationRule</fullName>
        <active>true</active>
        <errorConditionFormula>CASE( MOD( date__c - DATE(1900, 1, 7), 7), 0, 0, 6,0,1) = 0</errorConditionFormula>
        <errorDisplayField>date__c</errorDisplayField>
        <errorMessage>Invalid date (You have entered a date which wasn&apos;t a working day)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MaxPCTRule</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(AND( MaxPCT__c &lt;=100,MaxPCT__c &gt;=0))</errorConditionFormula>
        <errorMessage>MaxPCT can be between 0-100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MultipleOfFiveRule</fullName>
        <active>true</active>
        <errorConditionFormula>MOD(Multipleof5__c,5) &lt;&gt; 0</errorConditionFormula>
        <errorMessage>Number must be a multiple of 5</errorMessage>
    </validationRules>
</CustomObject>